--- a/final_project.Rmd
+++ b/final_project.Rmd
@@ -150,7 +150,7 @@ mappingdata$Sochi[is.na(mappingdata$Sochi)] <- 0
 
 world <- left_join(world, mappingdata, by="region")
 
-p1 <- ggplot(world, aes(x = long, y = lat, group = group)) +
+ggplot(world, aes(x = long, y = lat, group = group)) +
   geom_polygon(aes(fill = Paris)) +
   labs(title = "Paris 1900",
        x = NULL, y=NULL) +
@@ -159,9 +159,9 @@ p1 <- ggplot(world, aes(x = long, y = lat, group = group)) +
         panel.background = element_rect(fill = "navy"),
         plot.title = element_text(hjust = 0.5)) +
   guides(fill=guide_colourbar(title="Athletes")) +
-  scale_fill_gradient(low="white",high="red")
+  scale_fill_gradient(low="white",high="orange")
 
-p2 <- ggplot(world, aes(x = long, y = lat, group = group)) +
+ggplot(world, aes(x = long, y = lat, group = group)) +
   geom_polygon(aes(fill = Melbourne)) +
   labs(title = "Melbourne 1956",
        x = NULL, y = NULL) +
@@ -170,9 +170,9 @@ p2 <- ggplot(world, aes(x = long, y = lat, group = group)) +
         panel.background = element_rect(fill = "navy"),
         plot.title = element_text(hjust = 0.5)) +
   guides(fill=guide_colourbar(title="Athletes")) +
-  scale_fill_gradient2(low = "white", high = "red")
+  scale_fill_gradient2(low = "white", high = "orange")
 
-p3 <- ggplot(world, aes(x = long, y = lat, group = group)) +
+ggplot(world, aes(x = long, y = lat, group = group)) +
   geom_polygon(aes(fill = Sochi)) +
   labs(title = "Sochi 2014",
        x = NULL, y = NULL) +
@@ -181,9 +181,7 @@ p3 <- ggplot(world, aes(x = long, y = lat, group = group)) +
         panel.background = element_rect(fill = "navy"),
         plot.title = element_text(hjust = 0.5)) +
   guides(fill=guide_colourbar(title="Athletes")) +
-  scale_fill_gradient2(low="white",high = "red")
-
-grid.arrange(p1, p2, p3, ncol=1)
+  scale_fill_gradient2(low="white",high = "orange")
 ```
 
 ```{r}
@@ -195,7 +193,9 @@ athlete_events %>%
        x = "Olympic Year", 
        y = "Height (cm)") +
   scale_fill_manual(values=c("pink","blue")) +
-  theme(axis.text.x=element_text(size = 5, angle = 30))
+  #scale_x_continuous(breaks = seq(1896, 2016, by = 10),
+                     labels = c("1896", "1906", "'16", "'26",
+                                "'36", "'46", "'56", "'66", "'76", "'86", "'96", "2006", "2016"))
 ```
 
 ```{r}
